tests/samples/valid/BitwiseOperatorsAchievement.py
# cases where BitwiseOperatorsAchievement should unlock

# >> CASE
4 << 1

# >> CASE
4 >> 1

# >> CASE
4 & 5

# >> CASE
4 | 5

# >> CASE
4 ^ 5

# >> CASE
~4

# >> CASE
~(1 << 1 >> 1 & 1 | 0 ^ 1)
