tests/samples/invalid/MathOperatorsAchievement.py
# cases where MathOperatorsAchievement should not unlock

# >> CASE
True and False

# >> CASE
True or False

# >> CASE
not True

# >> CASE
4 << 1

# >> CASE
4 >> 1

# >> CASE
4 >> 1

# >> CASE
4 & 5

# >> CASE
4 | 5

# >> CASE
4 ^ 5

# >> CASE
~4
